Fix str replace issue in grid spacing.

--- a/nebula-css/tools/_offsets.scss
+++ b/nebula-css/tools/_offsets.scss
@@ -12,7 +12,7 @@
   }
 
   @each $key, $value in $fractions {
-    $modifier: nb-string-replace($key, '/', '\\/');
+    $modifier: nb-str-replace($key, '/', '\\/');
     $offset-value: (($value * 100) * 1%);
 
     .#{$nb-namespace}u-#{$class}#{$modifier} {
